 M$ Windows.
* https://github.com/ysb33r/gradleTest/issues/40[#40] - Added `gh-pages`-based .
* https://github.com/ysb33r/gradleTest/issues/44[#44] - If license plugin is applied, exclude GradleTest sourcesets
    from check.
* https://github.com/ysb33r/gradleTest/issues/50[#50] - Removed the use of deprecated `TaskInputs.source(Object)`
  when running under Gradle 3.0+.
* https://github.com/ysb33r/gradleTest/issues/55[#55] - Memory: Split compatiblity tests into smaller runs on Appveyor.
* https://github.com/ysb33r/gradleTest/issues/55[#56] - Memory: Use virtual image rather than container on TravisCI.
* https://github.com/ysb33r/gradleTest/issues/60[#60] - Mention alternative approaches to `GradleTest`.
* https://github.com/ysb33r/gradleTest/issues/61[#61] - Validate support for Gradle 3.3.
* https://github.com/ysb33r/gradleTest/issues/63[#63] - Documented `--offline` behaviour.

// end::changelog[]

== Contributors

// tag::contributors[]
*
// end::contributors[]

== v0.5.5
* https://github.com/ysb33r/gradleTest/issues/30[#30] - Specify init scripts
* https://github.com/ysb33r/gradleTest/issues/28[#28], https://github.com/ysb33r/gradleTest/pull/29[#29] - Better error
    message when ZIP archive is broken. (https://github.com/szpak[Marcin Zajączkowski])
* https://github.com/ysb33r/gradleTest/pull/22[#22], https://github.com/ysb33r/gradleTest/pull/23[#23] - Documentation
    corrections (https://github.com/matthiasbalke[Matthias Balke]).

== v0.5.4
* Updates for Gradle 2.5 

== v0.5.3
* https://github.com/ysb33r/gradleTest/issues/13[#13] - Failure running against JDk6 or JDK7.

== v0.5.2
* https://github.com/ysb33r/gradleTest/issues/11[#11] - Failure when GVM home directory does not exist.
* https://github.com/ysb33r/gradleTest/issues/9[#9] - Unpacking dropped `-bin` off the folder name
* https://github.com/ysb33r/gradleTest/issues/10[#10] - Distributions were incorrectly unpacked to a `gradleDist/gradleDist` folder.

== v0.5.1