@@ -1,0 +1,5 @@
+package multiproject
+
+class MyLib {
+    final static String NAME = 'MyLib'
+}
