@@ -1,0 +1,31 @@
+apply plugin : 'groovy'
+apply plugin : 'org.ysb33r.gradletest'
+
+repositories {
+    jcenter()
+}
+
+dependencies {
+    compile project(':myLib')
+    compile localGroovy()
+    compile gradleApi()
+}
+
+
+gradleTest {
+    versions '2.13','3.0'
+}
+
+// This is nice for debugging, but can only be done on later versions
+if(GradleVersion.current() > GradleVersion.version('2.13')) {
+    gradleTest {
+        beforeTest {
+            println '-'.multiply(60)
+            println "| [${project.name}] ${it.name}"
+            println "| ${configurations.gradleTestCompile.asPath}"
+            println '-'.multiply(60)
+        }
+    }
+}
+
+task runGradleTest( dependsOn : ['assemble','gradleTest'] )
