@@ -1,0 +1,5 @@
+apply plugin : MyLibPlugin
+
+task runGradleTest {
+    dependsOn myLibRunner
+}
