@@ -1,0 +1,2 @@
+include 'myLib'
+include 'pluginA'
